# scim2-client

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yaml
doc/: changelog.rst  conf.py  contributing.rst  index.rst  reference.rst  tutorial.rst
httpx_scim_client/: __init__.py  client.py  errors.py
scim2_client/: __init__.py  client.py  errors.py
scim2_client/engines/: httpx.py  werkzeug.py
tests/: conftest.py  test_create.py  test_delete.py  test_query.py  test_replace.py  test_search.py  test_utils.py
tests/engines/: test_httpx.py  test_werkzeug.py
