[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scim2-client"
version = "0.2.0"
description = "Pythonically build SCIM requests and parse SCIM responses"
authors = [{name="Yaal Coop", email="contact@yaal.coop"}]
license = {file = "LICENSE.md"}
readme = "README.md"
keywords = ["scim", "scim2", "provisioning", "rfc7643", "rfc7644", "httpx", "api"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: Apache Software License",
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
]

requires-python = ">= 3.9"
dependencies = [
    "httpx>=0.24.0",
    "scim2-models>=0.2.0",
]

[project.urls]
documentation = "https://scim2-client.readthedocs.io"
repository = "https://github.com/yaal-coop/scim2-client"
changelog = "https://scim2-client.readthedocs.io/en/latest/changelog.html"
funding = "https://github.com/sponsors/yaal-coop"

[tool.uv]
dev-dependencies = [
# development
    "pytest>=8.2.1",
    "pytest-coverage>=0.0",
    "pytest-httpserver>=1.0.10",
    "tox-uv>=1.15.0",
# documentation
    "autodoc-pydantic>=2.2.0",
    "myst-parser>=3.0.1",
    "shibuya>=2024.5.15",
    "sphinx>=7.3.7",
]

[tool.coverage.run]
source = [
    "scim2_client",
    "tests",
]
omit = [".tox/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "@pytest.mark.skip",
    "pragma: no cover",
    "raise NotImplementedError",
    "\\.\\.\\.\\s*$", # ignore ellipsis
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "E722", # bare-except
]

[tool.ruff.lint.isort]
force-single-line = true

[too.ruff.format]
docstring-code-format = true

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
skipsdist = true
envlist =
    style
    py39
    py310
    py311
    py312
    py313
    doc
    coverage

[testenv]
commands = pytest --showlocals --full-trace {posargs}

[testenv:style]
deps = pre-commit-uv
commands =
    pre-commit run --all-files --show-diff-on-failure

[testenv:doc]
commands =
    sphinx-build --builder html doc build/sphinx/html
    sphinx-build --builder man doc build/sphinx/html

[testenv:coverage]
commands =
    pytest --cov --cov-fail-under=100 --cov-report term:skip-covered {posargs}
    coverage html
"""
